<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>WebUITests</groupId>
	<artifactId>WebUITests</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>WebUITests</name>
	<description>WebUITests using selenium</description>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<browser.name>firefox</browser.name>
		<jdk.version>1.8</jdk.version>
		<selenium.version>[2.48.2,)</selenium.version>
		<cucumber.version>[1.2.4,)</cucumber.version>
		<jna.version>[4.1.0,)</jna.version>
		<junit.version>[4.11.0,)</junit.version>
		<cucumber-html.version>[0.2.3,)</cucumber-html.version>
		<masterthought.version>[0.1.0,)</masterthought.version>
	</properties>

	<repositories>
		<repository>
			<id>repo.bodar.com</id>
			<url>http://repo.bodar.com</url>
		</repository>
	</repositories>


	<dependencies>
		<!-- JAVA DEPENDENCY -->
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>16.0.1</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>1.6.4</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<!-- SELENIUM DEPENCY -->
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>${selenium.version}</version>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-support</artifactId>
			<version>${selenium.version}</version>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-server</artifactId>
			<version>${selenium.version}</version>
		</dependency>
		<dependency>
			<groupId>com.itextpdf</groupId>
			<artifactId>itextpdf</artifactId>
			<version>5.0.6</version>
		</dependency>

		<!-- CUCUMBER DEPENCY -->
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-core</artifactId>
			<version>${cucumber.version}</version>
		</dependency>

		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-java</artifactId>
			<version>${cucumber.version}</version>
		</dependency>

		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-junit</artifactId>
			<version>${cucumber.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>net.masterthought</groupId>
			<artifactId>cucumber-reporting</artifactId>
			<version>${masterthought.version}</version>
		</dependency>

		<dependency>
			<groupId>com.googlecode.totallylazy</groupId>
			<artifactId>totallylazy</artifactId>
			<scope>system</scope>
			<version>1.20</version>
			<systemPath>${basedir}/lib/totallylazy-1.20.jar</systemPath>
		</dependency>

		<!-- WebUIFramework Depencies -->
		<dependency>
			<groupId>WebUIFramework</groupId>
			<artifactId>WebUIFramework</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>

		<!-- REPORTING -->
		<dependency>
			<groupId>net.masterthought</groupId>
			<artifactId>cucumber-reporting</artifactId>
			<version>${masterthought.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<encoding>UTF-8</encoding>
					<source>${jdk.version}</source>
					<target>${jdk.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.18.1</version>
				<executions>
					<execution>
						<phase>integration-test</phase>
						<goals>
							<goal>test</goal>
						</goals>
						<configuration>
							<argLine>-Duser.language=en</argLine>
							<argLine>-Xmx1024m</argLine>
							<argLine>-XX:MaxPermSize=256m</argLine>
							<argLine>-Dfile.encoding=UTF-8</argLine>
							<useFile>false</useFile>
							<includes>
								<include>**/CucumberDriver.class</include>
							</includes>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<source>1.5</source>
					<target>1.8</target>
				</configuration>
			</plugin>
		</plugins>
		<resources>
			<resource>
				<directory>src/test/resources/properties/</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
	</build>
</project>